# WindowGrip

./: CMakeLists.txt  README.md  flicker.cpp  hook.cpp  main.cpp  main.cpp.old  native.cpp  rubber.cpp
.github/workflows/: cmake-single-platform.yml
